# streamsha

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
benches/: sha256.rs  sha512.rs
examples/: grayzone.rs
src/: arith.rs  consts.rs  hash_state.rs  lib.rs  macros.rs  sha1.rs  sha256.rs  sha512.rs  traits.rs  utils.rs
tests/: sha1.rs  sha256.rs  sha512.rs
